# podpico

./: .eslintrc.json  .gitignore  .prettierrc  AI_AGENT_INSTRUCTIONS.md  COMMIT_MESSAGE.txt  ImplementationPlan.md  PHASE_1_ACHIEVEMENT_REPORT.md  PROGRESS.md  ProductOverview.md  QUALITY_METRICS.md  README.md  SESSION_NOTES.md  eslint.config.js  package-lock.json  package.json  vitest.config.ts
.github/workflows/: README.md  ci.yml  nightly.yml  pr-quality.yml  release.yml
ai_assisted_development/: AI_AGENT_INSTRUCTIONS.md  FULL_STACK_REQUIREMENTS.md  ISSUES.md  ImplementationPlan.md  PRE_COMMIT_HOOKS.md  PROGRESS.md  QUALITY_METRICS.md  SESSION_END_CHECKLIST.md  SESSION_NOTES.md  TEST_NAMING_CONVENTIONS.md
chat_logs/: 2025-05-14_cursor_understand_instructions_and_repo.md
scripts/: doc-verify.sh  install-hooks.sh  quality-check.sh
src/: App.css  App.tsx  SafeHtmlRenderer.tsx  setupTests.ts
src-tauri/: Cargo.toml  Makefile  tarpaulin.toml  tauri.conf.json
src-tauri/coverage/: tarpaulin-report.html
src-tauri/data/: podcasts.db
src-tauri/scripts/: coverage.sh
src-tauri/src/: commands.rs  config.rs  database.rs  episode_manager.rs  error.rs  file_manager.rs  lib.rs  main.rs  rss_manager.rs  usb_manager.rs
src/__tests__/: App.e2e.test.tsx  App.test.tsx  DownloadE2E.test.tsx  RemoveEpisodeE2E.test.tsx  SafeHtmlRenderer.test.tsx  UsbDeviceManagement.test.tsx  UsbDeviceManagementE2E.test.tsx
